dnl -*- Mode: Autoconf; tab-width: 4; indent-tabs-mode: nil; -*-
dnl vi: set tabstop=4 shiftwidth=4 expandtab syntax=m4:
dnl This Source Code Form is subject to the terms of the Mozilla Public
dnl License, v. 2.0. If a copy of the MPL was not distributed with this
dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.

AC_PREREQ(2.13)
AC_INIT(mathfonts, 1.0)
AC_CONFIG_SRCDIR(README.md)

AC_CHECK_PROGS(GREP, grep)
AC_CHECK_PROGS(PYTHON, python)
AC_CHECK_PROGS(SED, sed)
AC_CHECK_PROGS(UNZIP, unzip)
AC_CHECK_PROGS(WGET, wget)

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
